--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,22 +24,34 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
-
 [tool.isort]
+profile = "black"
+line_length = 79
 multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-line_length = 88
 known_third_party = ["pytest"]
 
 [tool.darker]
 src = ["src/"]
-revision = "origin/master..."
+revision = "origin/master.."
+line_length = 80
+verbose = true
+skip_string_normalization = true
 diff = true
 check = true
-isort = true
-lint = ["flake8"]
-log_level = "INFO"
-line_length = 100
-verbose = true
+stdout = false
+isort = false
+quiet = false
+target_version = "py39"
+# lint = [
+#     "flake8",
+# ]
+log_level = "DEBUG"
+
+[tool.black]
+lint = [
+  "pylint"
+]
+preview = true
