--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
 astor==0.8.1
+astroid==2.15.0
+attrs==22.2.0
 black==23.1.0
 click==8.1.3
 darker==1.7.0
+dill==0.3.6
+exceptiongroup==1.1.0
+flake8==6.0.0
 flynt==0.77
+iniconfig==2.0.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.0
 platformdirs==3.1.0
+pluggy==1.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pylint==2.17.0
+pytest==7.2.2
 toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.6
 typing_extensions==4.5.0
+wrapt==1.15.0
