--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,50 +8,15 @@ packages = [{include = "gpt_experiment", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.9.4"
+darker = "^1.7.0"
+pylint = "^2.17.0"
 
 [tool.poetry.scripts]
-start = "src.gpt_experiment:main"
+start = "gpt_experiment:main"
 
 [tool.poetry.group.dev.dependencies]
-darker = "^1.7.0"
 mypy = "^1.1.1"
-black = "^23.1.0"
-flake8 = "^6.0.0"
-autopep8 = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-
-[tool.isort]
-profile = "black"
-line_length = 79
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-known_third_party = ["pytest"]
-
-[tool.darker]
-src = ["src/"]
-revision = "origin/master.."
-line_length = 80
-verbose = true
-skip_string_normalization = true
-diff = true
-check = true
-stdout = false
-isort = false
-quiet = false
-target_version = "py39"
-# lint = [
-#     "flake8",
-# ]
-log_level = "DEBUG"
-
-[tool.black]
-lint = [
-  "pylint"
-]
-preview = true
