--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,18 @@ click==8.1.3
 darker==1.7.0
 dill==0.3.6
 exceptiongroup==1.1.0
-flake8==6.0.0
 flynt==0.77
+-e git+ssh://git@github.com/mariomui/gpt-experiment_UMID-fcfa0e03-7252-43bb-9315-86f970e6f028.git@49cac582023241950ffa5cb3bd217be324181701#egg=gpt_experiment
 iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
+mypy==1.1.1
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.0
 platformdirs==3.1.0
 pluggy==1.0.0
-pycodestyle==2.10.0
-pyflakes==3.0.1
 pylint==2.17.0
 pytest==7.2.2
 toml==0.10.2
