Do a summary but run into sequence out of bounds issues.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,10 @@ flake8 = "^6.0.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.darker]
+line-length = 80                  # Passed to isort and Black, override their config
+lint = [
+    "pylint",
+]
+# flake8 doesnt get passed args here.
